# color

./: CMakeLists.txt  README.md  package.py
color/: assert.hpp  cmf.cpp  cmf.hpp  color_checker.cpp  color_checker.hpp  color_space_rgb.cpp  color_space_rgb.hpp  enum.hpp  illuminant.cpp  illuminant.hpp  math.hpp  platform.hpp  rgb.hpp  spd_conversion.cpp  spd_conversion.hpp  spectral_power_distribution.hpp  types.hpp
test/: test_color.cpp
